z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ div {
 	display: block;
 }
 
+a {
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  color: white;
+}
+
 i {
   color: white;
   display: inline;
@@ -92,7 +98,6 @@ i {
 }
 
 .btn p {
-  text-align: right;
   display: inline;
 }
 
@@ -172,7 +177,7 @@ footer a {
  }
 
 header {
-  z-index: 1;
+  z-index: 10;
   padding: 10px;
   background-color: #546E7A;
   height: 56px;
@@ -186,12 +191,7 @@ header {
   padding: 10px 5%;
 }
 
-/* MD - Buttons */
-a {
-  text-decoration: none;
-  -webkit-tap-highlight-color: transparent;
-  color: white;
-}
+/* Buttons */
 
 .btn-large {
   height: 54px;
@@ -230,7 +230,7 @@ a {
   color: #fff;
   position: relative;
   overflow: hidden;
-  z-index: 1;
+  z-index: 45;
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -274,7 +274,7 @@ a {
   bottom: 5%;
   padding-top: 15px;
   margin-bottom: 0;
-  z-index: 997;
+  z-index: 45;
 }
 
 .card, .icard {
@@ -291,11 +291,6 @@ a {
 
 img {
   border-style: none;
-}
-
-img.responsive-img, video.responsive-video {
-max-width: 100%;
-  height: auto;
 }
 
 table, th, td {
@@ -369,15 +364,12 @@ table, th, td {
 
 #overlay {
   position: fixed;
-  display: none;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 5;
+  z-index: 50;
   cursor: pointer;
 }
 
@@ -386,7 +378,7 @@ table, th, td {
   height: 100%; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
-  z-index: 5; /* Stay on top */
+  z-index: 51; /* Stay on top */
   top: 0;
   left: 0;
   background-color: #819ca9; /* Black*/
